tests/errors/test_18.xpp
// Character literal can only have one character in it

fn main() void {
    let x = 'ab';
}